# Calories-Expenditure-Prediction

./: notebook.ipynb  prueba.py  pyproject.toml
